# libmx

./: CMakeLists.txt  README.md  fragment  main_for_libmx.c  mx_int_printf.c
inc/: libmx.h
src/: main_for_libmx.c  mx_count_words.c  mx_del_extra_spaces.c  mx_file_to_str.c  mx_is_number.c  mx_itoa.c  mx_memccpy.c  mx_memchr.c  mx_memmove.c  mx_memrchr.c  mx_pop_back.c  mx_pop_front.c  mx_printf.c  mx_quicksort.c  mx_read_line.c  mx_realloc.c  mx_replace_substr.c  mx_strcat.c  mx_strdup.c  mx_strjoin.c  mx_strncpy.c  mx_strndup.c  mx_strsplit.c  mx_strtrim.c  mx_to_lower.c  mx_to_upper.c
